# AoC

./: .gitignore  AoC.cabal  README.md
Haskell/: Main.hs  README.md
Haskell/AoC/: AoC.cabal  README.md
Haskell/AoC/app/AoC2015/: Run.hs
Haskell/AoC/app/AoC2016/: Run.hs
Haskell/AoC/app/AoC2018/: Run.hs
Haskell/AoC/app/AoC2020/: Run.hs
Haskell/AoC/app/AoC2021/: DayOne.hs  DayTwo.hs  Run.hs
Haskell/AoC/app/AoC2022/: DayFour.hs  DayOne.hs  DaySix.hs  DayThree.hs  DayTwo.hs  Run.hs
Haskell/AoC2015/: DayOne.hs  Run.hs
Haskell/AoC2017/: Run.hs
Haskell/AoC2020/: DayOne.hs  Run.hs
Haskell/AoC2021/: Run.hs
Haskell/AoC2022/: DayOne.hs  DayTwo.hs  Run.hs
app/AoC2019/: Run.hs
app/AoC2020/: DayOne.hs
app/AoC2021/: DayOne.hs  Run.hs
app/AoC2022/: DayFive.hs  DayOne.hs  Run.hs
